k8s-rewrite/charts/media-stack/overseerr/service.yaml
# Overseerr Service
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 5055
    targetPort: 5055
    name: http
  selector:
    app: overseerr
